// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ConsoleReporter class Test print method should print lines to the logger 1`] = `
Array [
  "------------------- [ METRICS START (5) ] -------------------",
  "os.datetime.utc (gauge)",
  "  {}: 123456 ",
  "",
  "test.info (info)",
  "  {}: Test Value ",
  "",
  "test.counter (counter)",
  "  {}: 5 ",
  "  {action: posts\\\\comments}: 8 ",
  "",
  "test.gauge-total (gauge)",
  "  {action: users-\\"John\\"}: -8 ",
  "  {}: [object Object] ",
  "",
  "test.histogram (histogram)",
  "  {}: Count: 4 | 1: 0 | 5: 2 | 10: 4 | 0.005: 0 | 0.01: 0 | 0.025: 0 | 0.05: 0 | 0.1: 0 | 0.25: 0 | 0.5: 0 | 2.5: 2 | Min: 2.00 | Mean: 4.50 | Var: 9.00 | StdDev: 3.00 | Max: 8.00 | 0.5: 2.00 | 0.9: 8.00 | 0.95: 8.00 | 0.99: 8.00 | 0.999: 8.00 bytes",
  "  {action: auth}: Count: 3 | 1: 1 | 5: 2 | 10: 3 | 0.005: 0 | 0.01: 0 | 0.025: 0 | 0.05: 0 | 0.1: 0 | 0.25: 0 | 0.5: 0 | 2.5: 1 | Min: 1.00 | Mean: 3.67 | Var: 9.33 | StdDev: 3.06 | Max: 7.00 | 0.5: 3.00 | 0.9: 7.00 | 0.95: 7.00 | 0.99: 7.00 | 0.999: 7.00 bytes",
  "",
  "-------------------- [ METRICS END (5) ] --------------------",
]
`;

exports[`Test ConsoleReporter class Test print method with onlyChanges should not print lines to the logger 1`] = `
Array [
  "------------------- [ METRICS START (17) ] -------------------",
  "moleculer.node.type (info)",
  "  {}: nodejs ",
  "",
  "moleculer.node.versions.moleculer (info)",
  "  {}: 0.14.0-beta2 ",
  "",
  "moleculer.node.versions.protocol (info)",
  "  {}: 4 ",
  "",
  "moleculer.broker.namespace (info)",
  "  {}: <empty string> ",
  "",
  "moleculer.broker.started (gauge)",
  "  {}: 0 ",
  "",
  "moleculer.broker.local.services.total (gauge)",
  "  {}: 1 ",
  "",
  "moleculer.broker.middlewares.total (gauge)",
  "  {}: 11 ",
  "",
  "moleculer.registry.nodes.total (gauge)",
  "  {}: 1 ",
  "",
  "moleculer.registry.nodes.online.total (gauge)",
  "  {}: 1 ",
  "",
  "moleculer.registry.services.total (gauge)",
  "  {}: 0 ",
  "",
  "moleculer.registry.actions.total (gauge)",
  "  {}: 0 ",
  "",
  "moleculer.registry.events.total (gauge)",
  "  {}: 0 ",
  "",
  "os.datetime.utc (gauge)",
  "  {}: 123456 ",
  "",
  "test.info (info)",
  "  {}: Test Value ",
  "",
  "test.counter (counter)",
  "  {}: 5 ",
  "  {action: posts\\\\comments}: 8 ",
  "",
  "test.gauge-total (gauge)",
  "  {action: users-\\"John\\"}: -8 ",
  "  {}: [object Object] ",
  "",
  "test.histogram (histogram)",
  "  {}: Count: 4 | 1: 0 | 5: 2 | 10: 4 | 0.005: 0 | 0.01: 0 | 0.025: 0 | 0.05: 0 | 0.1: 0 | 0.25: 0 | 0.5: 0 | 2.5: 2 | Min: 2.00 | Mean: 4.50 | Var: 9.00 | StdDev: 3.00 | Max: 8.00 | 0.5: 2.00 | 0.9: 8.00 | 0.95: 8.00 | 0.99: 8.00 | 0.999: 8.00 bytes",
  "  {action: auth}: Count: 3 | 1: 1 | 5: 2 | 10: 3 | 0.005: 0 | 0.01: 0 | 0.025: 0 | 0.05: 0 | 0.1: 0 | 0.25: 0 | 0.5: 0 | 2.5: 1 | Min: 1.00 | Mean: 3.67 | Var: 9.33 | StdDev: 3.06 | Max: 7.00 | 0.5: 3.00 | 0.9: 7.00 | 0.95: 7.00 | 0.99: 7.00 | 0.999: 7.00 bytes",
  "",
  "-------------------- [ METRICS END (17) ] --------------------",
]
`;

exports[`Test ConsoleReporter class Test print method with onlyChanges should print changes only 1`] = `
Array [
  "------------------- [ METRICS START (2) ] -------------------",
  "test.counter (counter)",
  "  {}: 12 ",
  "  {action: posts\\\\comments}: 8 ",
  "",
  "test.gauge-total (gauge)",
  "  {action: users-\\"John\\"}: -8 ",
  "  {}: [object Object] ",
  "  {action: posts}: -5 ",
  "",
  "-------------------- [ METRICS END (2) ] --------------------",
]
`;
